Full final builder.bat